# LSFG-Android-Application

./: .gitignore  LICENSE  README.md  gradle.properties  gradle.properties.example  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/lsfg/android/shizuku/: IShizukuCaptureService.aidl  IShizukuFrameCallback.aidl
app/src/main/cpp/: CMakeLists.txt  ahb_image_bridge.cpp  ahb_image_bridge.hpp  android_shader_loader.cpp  android_shader_loader.hpp  android_vk_probe.cpp  android_vk_probe.hpp  android_vk_session.cpp  android_vk_session.hpp  cpu_postprocess.cpp  cpu_postprocess.hpp  crash_reporter.cpp  crash_reporter.hpp  gpu_postprocess.comp  gpu_postprocess.cpp  gpu_postprocess.hpp  gpu_postprocess.spv  gpu_postprocess_spv.hpp  lsfg_jni.cpp  lsfg_render_loop.cpp  lsfg_render_loop.hpp  nnapi_npu.cpp  nnapi_npu.hpp  nnapi_postprocess.cpp  nnapi_postprocess.hpp  unicode_minimal.cpp
app/src/main/java/com/lsfg/android/: FeatureFlags.kt  LsfgApplication.kt
app/src/main/java/com/lsfg/android/prefs/: LsfgPreferences.kt
app/src/main/java/com/lsfg/android/session/: AutoOverlayController.kt  CaptureEngine.kt  CrashReporter.kt  FrameGraphView.kt  LauncherDotOverlay.kt  LauncherSheetView.kt  LsfgAccessibilityService.kt  LsfgForegroundService.kt  LsfgLog.kt  NativeBridge.kt  OverlayManager.kt  PermissionsHelper.kt  PrivilegedScreenCapture.kt  RootCaptureEngine.kt  RootCaptureService.kt  SettingsDrawerOverlay.kt  ShaderExtractor.kt  ShizukuCaptureEngine.kt  ShizukuCaptureUserService.kt
app/src/main/java/com/lsfg/android/ui/: AppIconLoader.kt  AppPickerScreen.kt  AutomaticOverlayScreen.kt  ConfigState.kt  DllPickerScreen.kt  HomeScreen.kt  LegalScreen.kt  LsfgNavHost.kt  MainActivity.kt  ParamsScreen.kt  ProjectionRequestActivity.kt  TutorialScreen.kt
app/src/main/java/com/lsfg/android/ui/components/: LsfgComponents.kt
app/src/main/java/com/lsfg/android/ui/theme/: Color.kt  Shape.kt  Theme.kt  Type.kt
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: accessibility_service_config.xml  data_extraction_rules.xml  file_provider_paths.xml
